src/style.css
@import url('https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Nanum+Gothic&display=swap');
@import url('https://fonts.googleapis.com/icon?family=Material+Icons');

:root {
  --body-font: "Inria Sans", serif;
  --text: rgb(255, 255, 255);
  --text-highlight: rgb(30, 30, 30);
  --text-faded: rgba(255, 255, 255, 0.7);
  --text-faded-highlight: rgba(30, 30, 30, 0.7);
  --background: rgb(34, 34, 34);
  --highlight: rgb(238, 66, 128);
  --foreground: rgb(52, 52, 52);
  --footer: rgb(15, 15, 15);
  --drop-shadow: rgba(0, 0, 0, 0.25);
  --transparent: rgba(0, 0, 0, 0.0);
  --space-xxs: 0.236rem;
  --space-xs: 0.382rem;
  --space-sm: 0.618rem;
  --space-md: 1rem;
  --space-lg: 1.68rem;
  --space-xl: 2.618rem;
  --space-xxl: 4.236rem;
  --space-xxxl: 6.854rem;
  --navbar-margin-height: calc((var(--space-md) * 2 + 24px) + var(--space-xxl));
}
/* Basic Building Blocks */

*, *::before, *::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

body {
  font-family: var(--body-font);
  font-size: var(--space-md);
  line-height: 1.5;
  font-weight: 400;
  color: var(--text);
  background-color: var(--background);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

input, button, textarea, select {
  font: inherit;
}

p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

p {
  text-wrap: pretty;
}
h1, h2, h3, h4, h5, h6 {
  text-wrap: balance;
}

#root, #__next {
  isolation: isolate;
}

/* Style Utilities */

.highlight {
  background: var(--highlight);
}

.boxshadow {
  box-shadow: 0px 6px var(--drop-shadow);
}

.text-secondary {
  color: var(--text-faded);
}

.material-icons {
  vertical-align: middle;
}

/* Margin */

.m-xxs { margin: var(--space-xxs); }
.m-xs { margin: var(--space-xs); }
.m-sm { margin: var(--space-sm); }
.m-md { margin: var(--space-md); }
.m-lg { margin: var(--space-lg); }
.m-xl { margin: var(--space-xl); }
.m-xxl { margin: var(--space-xxl); }
.m-xxxl { margin: var(--space-xxxl); }

/* Padding */

.p-xxs { padding: var(--space-xxs); }
.p-xs { padding: var(--space-xs); }
.p-sm { padding: var(--space-sm); }
.p-md { padding: var(--space-md); }
.p-lg { padding: var(--space-lg); }
.p-xl { padding: var(--space-xl); }
.p-xxl { padding: var(--space-xxl); }
.p-xxxl { padding: var(--space-xxxl); }

/* Common Components (ie Buttons, Charts) */

h3 {
  font-size: var(--space-md);
  font-weight: 600;
}
 /* Individual buttons are further styled in their respective components */
button {
  color: var(--text);
  border: none;
  transition-duration: 0.4s;
}

button:hover {
  color: var(--text-highlight);
}
/* Everything more specific will go in scoped styles!*/

